# WeChatVoiceCodec

./: README.md  build.gradle  publish-mavencentral.gradle  publishToJCenter.sh  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/reinhard/wechat/voicecodec/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/reinhard/wechat/voicecodec/: FileUtils.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/reinhard/wechat/voicecodec/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
lame/: CMakeLists.txt  build.gradle
lame/src/androidTest/java/com/reinhard/lame/: ExampleInstrumentedTest.java
lame/src/main/: AndroidManifest.xml
lame/src/main/cpp/lame/frontend/: main.h
lame/src/main/java/com/reinhard/lame/: MainActivity.java
lame/src/test/java/com/reinhard/lame/: ExampleUnitTest.java
libwcvcodec/: CMakeLists.txt  build.gradle
libwcvcodec/src/androidTest/java/com/reinhard/wcvcodec/: ExampleInstrumentedTest.java
libwcvcodec/src/main/: AndroidManifest.xml
libwcvcodec/src/main/cpp/: WcvCodec.c  WcvCodec.h  android_log.h
libwcvcodec/src/main/cpp/lame/: LameCodec.c  LameCodec.h
libwcvcodec/src/main/cpp/lame/frontend/: lame_main.c
libwcvcodec/src/main/cpp/lame/libmp3lame/: util.h
libwcvcodec/src/main/cpp/silk/: SilkCodec.c  SilkCodec.h
libwcvcodec/src/main/cpp/silk/test/: Decoder.c  Encoder.c
libwcvcodec/src/main/java/com/reinhard/wcvcodec/: WcvCodec.java
libwcvcodec/src/main/res/values/: strings.xml
libwcvcodec/src/test/java/com/reinhard/wcvcodec/: ExampleUnitTest.java
libwcvcodec/test_vectors/: wechat_voice.pcm
silk/: CMakeLists.txt  build.gradle
silk/src/androidTest/java/com/reinhard/silk/: ExampleInstrumentedTest.java
silk/src/main/: AndroidManifest.xml
silk/src/main/java/com/reinhard/silk/: MainActivity.java
silk/src/main/res/values/: strings.xml
silk/src/test/java/com/reinhard/silk/: ExampleUnitTest.java
silk/test_vectors/: wechat_voice.amr
